Mover para Postgres (#8)
┃┃╱╲ nessa
┃╱╱╲╲ casa
╱╱╭╮╲╲ nós
▔▏┗┛▕▔ amamos e respeitamos
╱▔▔▔▔▔▔▔▔▔▔╲
SURSKITY
╱╱┏┳┓╭╮┏┳┓ ╲╲
▔▏┗┻┛┃┃┗┻┛▕▔

* Gemfile: remover sqlite3

cabo

* database: mover para postgres

arrumem seus bancos de dados galerinha

* travis: atualizar configuração da database

* travis: mudar nome do banco de dados

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: ruby
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database whispr_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
 script:
   - bundle exec rake spec
   - bundle exec rake spec:features
