tests: voltar para o chromedriver
Adicionar um driver variante do headless comum, com resolucao
de desktop.

favor ignorar abaixo

travis: adicionar servico xvfb

travis: adicionar flag a chamada xvfb-run

sei la mano stack overflow me ajude

travis: criar/migrar database

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

hehe memes xd

awa

remover comment

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ env:
 language: ruby
 services:
   - postgresql
-before_install:
-  # Instalar dependências do Capybara-Webkit
-  - sudo apt-get update
-  - sudo apt-get install -y g++ qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
+addons:
+  chrome: stable
 before_script:
   # Configurar reporter de test coverage do CodeClimate.
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -20,6 +18,6 @@ before_script:
 script:
   - bundle exec rake spec
   # Rodar o cucumber em um servidor X virtual, para utilizar o WebKit.
-  - xvfb-run bundle exec cucumber
+  - bundle exec cucumber
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
